--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^3.0.1",
+    "react-scroll-to-top": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
